<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Radiation Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="button_click">Click Me</string>
    <string name="info_save">Radiation is not detected.\n You are safe!</string>
    <string name="info_ded">Radiation detected</string>
    <string name="info_bright">Number of bright pixels: %1$d</string>
    <string name="info_no_cam">Your phone hasn\'t got a camera.</string>
    <string name="settings">Settings</string>
    <string name="threshold">Threshold</string>
    <string name="alarm_level">Alarm level</string>
    <string name="send_by_UDP">Send data by UDP</string>
    <string name="device_IP_address">Device IP address</string>
    <string name="Save">Save</string>
    <string name="Back">Back</string>
    <string name="calibrate">Calibrate</string>
    <string name="destination_IP">Destination IP address</string>
    <string name="saved_threshold">saved_threshold</string>
    <string name="saved_alarm_level">saved_alarm_level</string>
    <string name="saved_UDP_enable">saved_UDP_enable</string>
    <string name="saved_destination_IP">saved_destination_IP</string>
    <string name="preference_file_key">eu.camdetector.radiationalarm.pref</string>
    <string name="Info">Information</string>
    <string name="Info_text">Information:\n
A photo camera built-in your device can be used as a ionizing radiation detector. It could warn you against a high level of harmful radiation. Before use, please cover your main camera using e.g. a piece of black tape. Then go to Settings &#8212;> Calibrate, and now the application is ready to use.
\n WARNING! \n
The authors of the application put as much effort as they could to make the application the best. But there is no guarantee that application will work properly, won\'t damage your device and will be able to detect ionizing radiation properly.</string>
    <string name="dont_again">Don\'t show again</string>
    <string name="Info_text_i">A photo camera built-in your device can be used as a ionizing radiation detector. It could warn you against a high level of harmful radiation. Before use, please cover your main camera using e.g. a piece of black tape.\n Before use glue lens by black tape and calibrate software:</string>
    <string name="saved_info_show">saved_info_show</string>
    <string name="first_th_val">1. threshold</string>
    <string name="second_th_val">2. threshold</string>
    <string name="info_low_rad">You have detected safe background radiation or weak radiation source.\n Keep the app running for longer time to obtain more accurate measurment.</string>
	<string name="init_info_step_1">STEP 1: obscure your camera</string>
	<string name="init_info_step_2">STEP 2: calibrate your device</string>
	<string name="init_info_init" >Follow two steps to turn your smartfone to radiation alarm.</string>
</resources>