<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Info_text_i" />
      
    </ScrollView>

    <CheckBox
        android:id="@+id/info_dont_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/dont_again" />

    <Button
        android:id="@+id/info_cali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calibrate" />

</LinearLayout>