<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >

           <TextView
               android:id="@+id/textView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:gravity="center"
               android:text="@string/threshold"
               android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/alarm_level"
                android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

                <EditText
			        android:id="@+id/threshold"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number"
			        android:layout_weight="1" >
			    </EditText>
			    <EditText
			        android:id="@+id/alarm_level"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:ems="10"
			        android:inputType="number" 
			        android:layout_weight="1">
			    </EditText>     

    </LinearLayout>

    <Button
        android:id="@+id/calibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/calibrate" />

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <Button
	        android:id="@+id/save"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/Save" />

	    <Button
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/Back" />

	 </LinearLayout>


</LinearLayout>
</ScrollView>